# epi-geo-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
code_samples/comparisons/: temporal_diff.py
code_samples/spatial_maps/: folium_overlay.py  single_band_choropleth.py
code_samples/statistics/: zonal_summary.py
code_samples/time_series/: ndvi_time_series.py  rainfall_time_series.py
docs/: agent_architecture.md  agent_framework.md  evaluations.md  infrastructure.md  nigeria_state_bboxes.json  observability.md  rag.md  stac_inventory.json
docs/infra/: local-development.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  staticwebapp.config.json  vite.config.ts
frontend/src/: App.tsx  index.css
infra/chat-app/: main.tf  outputs.tf  variables.tf
infra/vector-store/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
requirements/: base.txt
scripts/: index_collections.py  inventory_stac.py  test_workflow.py
src/agents/: agent_config.py  agent_runners.py  code_generator.py  geocoding_temporal.py  query_parser.py  response_synthesizer.py  stac_coordinator.py  workflow.py
src/api/: app.py  config.py  schemas.py
src/code_executor/: __init__.py  artifact_store.py  models.py  sandbox.py  validator.py
src/rag/: code_sample_retriever.py  code_sample_store.py  collection_resolver.py  vector_store.py
src/stac/: catalog_client.py  geocoding.py
src/utils/: datetime_parser.py  logging_config.py  observability.py
tests/evaluation/: evaluate.py  results.json
(+67 files in other folders)
